Fixed an error with networkD3

--- a/modeling-bn.ipynb
+++ b/modeling-bn.ipynb
@@ -59,7 +59,8 @@
     "\n",
     "library(lubridate)\n",
     "\n",
-    "library(bnlearn)"
+    "library(bnlearn)\n",
+    "library(networkD3)"
    ]
   },
   {
